# req-rs

./: .gitmessage  Cargo.toml  README.md  REFERENCE.md  example.toml  httpbin.toml  schema.json
.github/: dependabot.yml
.github/workflows/: release.yml  rust.yml
examples/: .env.dev  .env.prod  advanced.toml  authentication.toml  basic.toml  body-types.toml  environment.toml  headers-queries.toml  rest-api.toml
src/: data.rs  interpolation.rs  main.rs
src/snapshots/: req__tests__curl_option_tests__basic_get.snap  req__tests__curl_option_tests__post_with_json_body.snap  req__tests__curl_option_tests__post_with_multiline_body.snap  req__tests__curl_option_tests__with_basic_auth.snap  req__tests__curl_option_tests__with_bearer_auth.snap  req__tests__curl_option_tests__with_custom_headers.snap  req__tests__curl_option_tests__with_detailed_proxy.snap  req__tests__curl_option_tests__with_detailed_proxy_http_url.snap  req__tests__curl_option_tests__with_insecure_option.snap  req__tests__curl_option_tests__with_proxy_auth.snap  req__tests__curl_option_tests__with_proxy_special_chars.snap  req__tests__curl_option_tests__with_redirect_option.snap  req__tests__curl_option_tests__with_simple_proxy.snap  req__tests__curl_option_tests__with_special_chars_in_url.snap  req__tests__listing_no_task_arg.snap
tests/: cli.rs  cwd.rs  exit_codes.rs  schema.rs
tests/common/: mod.rs
tests/snapshots/: schema__schema_output_snapshot.snap
