[package]
name = "req-rs"
version = "0.5.0"
authors = ["stsysd <000stsysd000@gmail.com>"]
edition = "2018"
description = "http request builder from configuration file"

[[bin]]
name = "req"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.5.8"
serde_json = "1.0.61"
serde = "1.0.118"
serde_derive = "1.0.118"
regex = "1.4.5"
once_cell = "1.7.2"
anyhow = "1.0"
clap = { version = "3", features = ["derive"] }
indicatif = "0.16.2"
schemars = "0.8.12"

[dependencies.reqwest]
version = "0.10.7"
default-features = false
features = ["json", "blocking", "rustls-tls"]
