[package]
name = "req-rs"
version = "0.5.2"
authors = ["stsysd <000stsysd000@gmail.com>"]
edition = "2018"
description = "http request builder from configuration file"

[[bin]]
name = "req"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.9"
serde_json = "1"
serde = "1"
serde_derive = "1"
regex = "1"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
indicatif = "0.18"
base64 = "0.22.1"
dotenvy = "0.15.7"

[dependencies.reqwest]
version = "0.12"
default-features = false
features = ["json", "blocking", "multipart", "rustls-tls"]

[dev-dependencies]
httpmock = "0.8.2"
rstest = "0.26.1"
tempfile = "3.23.0"
uuid = { version = "1.18.1", features = ["v4"] }
insta = "1.41"
